feat: add viewing flow
