# application/outbound-repository-jpa/src/main/java/sk/fsa/rental/jpa/ViewingRequestSpringDataRepository.java
@@ -1,13 +1,11 @@
-package sk.fsa.rental.domain.repository;
+package sk.fsa.rental.jpa;
 
+import org.springframework.data.jpa.repository.JpaRepository;
 import sk.fsa.rental.domain.ViewingRequest;
 
 import java.util.List;
-import java.util.Optional;
 
-public interface ViewingRequestRepository {
-    ViewingRequest save(ViewingRequest viewingRequest);
-    Optional<ViewingRequest> findById(Long id);
+interface ViewingRequestSpringDataRepository extends JpaRepository<ViewingRequest, Long> {
     List<ViewingRequest> findByRequesterId(Long requesterId);
     List<ViewingRequest> findByOwnerId(Long ownerId);
     List<ViewingRequest> findByListingId(Long listingId);
